--- a/sections/books/books.html
+++ b/sections/books/books.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="../../mystyle.css">
     </head>
     <body>
-        <p> All the books I wrote about:
+        <p> There are several types of books I want to share:
+            For one there are intellectually interesting books.
+            But I also like to read for fun so I will share my thoughts on the books I encounter on this journey as well.
         <p class="multiline">
             <a href="4thwing/4thwing.html">Fourth Wing</a>
             <a href="atlas6/atlas6.html">The Atlas Six</a>
