Remove Chapters from books

--- a/sections/books/books.html
+++ b/sections/books/books.html
@@ -9,8 +9,8 @@
             For one there are intellectually interesting books.
             But I also like to read for fun so I will share my thoughts on the books I encounter on this journey as well.
         <p class="multiline">
-            <a href="4thwing/4thwing.html">Fourth Wing</a>
-            <a href="atlas6/atlas6.html">The Atlas Six</a>
+            <a href="4thwing.html">Fourth Wing</a>
+            <a href="atlas6.html">The Atlas Six</a>
     </body>
 </html>
 
