Fix text at index.html

--- a/index.html
+++ b/index.html
@@ -33,19 +33,9 @@
     </pre>
     <main>
       <p>
-        Hey! :) I am glad you found your way here. I am a
-        <code>computer science</code> student currently living in Karlsruhe,
-        Germany. In my free time I like to construct things with Lego Technic,
-        some of which you can see on my
-        <a href="https://www.youtube.com/@technicfreakz9490/">YouTube</a>. I
-        also do lots of sports, mainly Parkour, Freerunning, Tricking and
-        Calisthenics as well as read books. Some of my
-        <a href="sections/books/books.html">thoughts about the books</a> I read
-        will end up on this website.
-      </p>
-      <p>
-        You can find everything else in the
-        <a href="sections/sections.html">archive</a>.
+        Hey! :) I am glad you found your way here. I am a computer science student currently living in Karlsruhe, Germany.
+        In my free time I like to construct things with Lego Technic, some of which you can see on my <a href="https://www.youtube.com/@technicfreakz9490/">YouTube</a>.
+        I also do lots of sports, mainly Parkour, Freerunning, Tricking, Bouldering and Calisthenics as well as read books.
       </p>
 
       <nav>
