--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
           </div>
           <p class="card-text">
             Where the idea from this website came from and what inspired me to make it look the way it looks.
+            Also plans on what to do with it next.
           </p>
         </div>
       </div>
