Render triangles with unicode

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             onclick="toggleTagVisibility()"
             type="button"
           >
-            Tags ▼
+            Tags &#9660;
           </button>
           <button
             class="button is-rounded show-tags hidden"
             onclick="toggleTagVisibility()"
             type="button"
           >
-            Tags ▲
+            Tags &#9650;
           </button>
           <button
             class="button is-rounded toggle-all"
