--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>exe.Cushions website</title>
     <link rel="stylesheet" href="mystyle.css" />
     <script src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
